--- a/src/scss/entry/main.scss
+++ b/src/scss/entry/main.scss
@@ -42,6 +42,7 @@
 @import "./../main/components/list";
 @import "./../main/components/table";
 @import "./../main/components/searchbar";
+@import "./../main/components/quantity-input";
 
 @import "./../main/pages/pages";
 
